css: Fix problem that some layout covers button on mobile view
See: Yona Github issue #244

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -703,6 +703,7 @@ span.issue-label {
     margin-left: .3em;
     border: 1px solid rgba(0,0,0,.15);
     .box-shadow(0 1px 0 rgba(0,0,0,.05));
+    z-index: 2;
 
     i { line-height:20px;}
 
